Add traefik comment

--- a/nginx-reverse-proxy/nginx-app.conf
+++ b/nginx-reverse-proxy/nginx-app.conf
@@ -1,11 +1,11 @@
 # nginx app.conf
 # Route traffic 
 #   from: /app
-#   To: IP_HAPROXY_SWARM 
+#   To: LB swarm nodes (IP_HAPROXY_SWARM  or traefik)
 #   with HTTP Header X-Hdr-01: "app_front_user"
 
   location ~ "^/app" {
-            rewrite "^(/.*)$" $1 break;
+#            rewrite "^(/.*)$" $1 break;
             add_header Access-Control-Allow-Origin '$http_origin';
             proxy_set_header Host $http_host;
             proxy_set_header X-Hdr-01  "app_front_user";
