--- a/nginx-reverse-proxy/nginx-web.conf
+++ b/nginx-reverse-proxy/nginx-web.conf
@@ -1,11 +1,12 @@
 # nginx web.conf
 # Route traffic
 #   from: /web
-#   To: IP_HAPROXY_SWARM 
+#   To: LB swarm nodes (IP_HAPROXY_SWARM  or traefik)
 #   wth HTTP Header Host: "web"
 
   location ~ "^/web" {
-            rewrite "^/web(/.*)$" $1 break;
+# Using haproxy as backend
+#            rewrite "^/web(/.*)$" $1 break;
             add_header Access-Control-Allow-Origin '$http_origin';
             proxy_set_header Host "web";
             proxy_set_header Connection "";
@@ -16,5 +17,5 @@
             proxy_redirect off;
             proxy_buffering off;
             proxy_http_version 1.1;
-            proxy_pass http://IP_HAPROXY_SWARM;
+            proxy_pass http://LB_SWARM_IP;
   }
