--- a/swarm-stack/traefik/traefik-stack.yml
+++ b/swarm-stack/traefik/traefik-stack.yml
@@ -6,6 +6,8 @@ services:
     image: privateregistry/traefik:1.7
     command:
       - "--api"
+      - "--accessLog"
+      - "--loglevel=INFO"
       - "--docker"
       - "--docker.swarmMode"
       - "--docker.watch"
@@ -14,9 +16,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "80:80"
-        #      - "8088:8080"
     networks:
-      - frontend
+      - traefik-frontend
       - portainer_agent_network
     deploy:
       mode: global
@@ -24,8 +25,17 @@ services:
         constraints:
           - node.labels.leader!=true
           - node.role == manager
+      labels:
+        - "traefik.enable=true"
+        - "traefik.port=8080"
+        - "traefik.docker.network=traefik-frontend"
+        - "traefik.redirectorservice.frontend.entryPoints=http"
+        - "traefik.frontend.rule=Host:traefik"
+        - "traefik.frontend.rule=PathPrefixStrip: /traefik"
+
 networks:
-  frontend:
-    driver: overlay
+  traefik-frontend:
+    external: true
+    name: traefik-frontend
   portainer_agent_network:
     external: true
