Fix nginx conf, make, network traefik

--- a/nginx-reverse-proxy/nginx-portainer.conf
+++ b/nginx-reverse-proxy/nginx-portainer.conf
@@ -4,6 +4,12 @@
 #   To: LB swarm nodes (IP_HAPROXY_SWARM  or traefik)
 #   with HTTP Header Host: "portainer"
 
+upstream swarmcluster {
+  server ip_manager0;
+  server ip_manager1;
+  server ip_manager2;
+}
+#
 # Using haproxy as backend
 #  location ~ "^/portainer/api/websocket" {
 #            rewrite "^/portainer(/.*)$" $1 break;
@@ -21,6 +27,7 @@
 #            proxy_pass http://IP_HAPROXY_SWARM;
 #  }
 
+server {
   location ~ "^/portainer" {
 # Using haproxy as backend
 #            rewrite "^/portainer(/.*)$" $1 break;
@@ -34,5 +41,6 @@
             proxy_redirect off;
             proxy_buffering off;
             proxy_http_version 1.1;
-            proxy_pass http://IP_HAPROXY_SWARM;
+            proxy_pass http://swarm_cluster;
   }
+}
