--- a/nginx-reverse-proxy/nginx-app.conf
+++ b/nginx-reverse-proxy/nginx-app.conf
@@ -4,6 +4,13 @@
 #   To: LB swarm nodes (IP_HAPROXY_SWARM  or traefik)
 #   with HTTP Header X-Hdr-01: "app_front_user"
 
+upstream swarmcluster {
+  server ip_manager0;
+  server ip_manager1;
+  server ip_manager2;
+}
+
+server {
   location ~ "^/app" {
 #            rewrite "^(/.*)$" $1 break;
             add_header Access-Control-Allow-Origin '$http_origin';
@@ -17,5 +24,6 @@
             proxy_redirect off;
             proxy_buffering off;
             proxy_http_version 1.1;
-            proxy_pass http://IP_HAPROXY_SWARM;
+            proxy_pass http://swarm_cluster;
   }
+}
