--- a/nginx-reverse-proxy/nginx-traefik.conf
+++ b/nginx-reverse-proxy/nginx-traefik.conf
@@ -4,6 +4,13 @@
 #   To: LB swarm nodes (IP_HAPROXY_SWARM  or traefik)
 #   with HTTP Header Host: "traefik"
 
+upstream swarmcluster {
+  server ip_manager0;
+  server ip_manager1;
+  server ip_manager2;
+}
+
+server {
   location ~ "^/traefik" {
             add_header Access-Control-Allow-Origin '$http_origin';
             proxy_set_header Host "traefik";
@@ -15,5 +22,6 @@
             proxy_redirect off;
             proxy_buffering off;
             proxy_http_version 1.1;
-            proxy_pass http://IP_HAPROXY_SWARM;
+            proxy_pass http://swarm_cluster;
   }
+}
