--- a/nginx-reverse-proxy/nginx-web.conf
+++ b/nginx-reverse-proxy/nginx-web.conf
@@ -4,6 +4,13 @@
 #   To: LB swarm nodes (IP_HAPROXY_SWARM  or traefik)
 #   wth HTTP Header Host: "web"
 
+upstream swarmcluster {
+  server ip_manager0;
+  server ip_manager1;
+  server ip_manager2;
+}
+
+server {
   location ~ "^/web" {
 # Using haproxy as backend
 #            rewrite "^/web(/.*)$" $1 break;
@@ -17,5 +24,6 @@
             proxy_redirect off;
             proxy_buffering off;
             proxy_http_version 1.1;
-            proxy_pass http://LB_SWARM_IP;
+            proxy_pass http://swarm_cluster;
   }
+}
