--- a/swarm-stack/registry/registry-stack.yml
+++ b/swarm-stack/registry/registry-stack.yml
@@ -4,8 +4,8 @@ version: '3.5'
 services:
   registry:
     image: ${REGISTRY_URL:-privateregistry}/registry:2
-    ports:
-     - "5000:5000"
+#    ports:
+#     - "5000:5000"
     environment:
       REGISTRY_HTTP_ADDR: 0.0.0.0:5000
       REGISTRY_STORAGE: swift
@@ -23,13 +23,21 @@ services:
       REGISTRY_AUTH_HTPASSWD_PATH: /opt/registry/auth/users.htpasswd
     networks:
       - registry-network
+      - app
     deploy:
       mode: replicated
       replicas: 1
       placement:
         constraints:
-          - node.hostname==swarm-leader-test-leader-0
+#          - node.hostname==swarm-leader-test-leader-0
           - node.role == manager
+      labels:
+        - "traefik.enable=true"
+        - "traefik.port=5000"
+        - "traefik.backend=registry"
+        - "traefik.frontend.rule=Host:registry"
+        - "traefik.docker.network=traefik-frontend"
+
     configs:
       - source: registry-auth-htpasswd
         target: /opt/registry/auth/users.htpasswd
@@ -39,6 +47,9 @@ configs:
   registry-auth-htpasswd:
     external: true
 networks:
+  app:
+    external: true
+    name: traefik-frontend
   registry-network:
     driver: overlay
     name: registry-network
