deploy registry on worker

--- a/swarm-stack/registry/registry-stack.yml
+++ b/swarm-stack/registry/registry-stack.yml
@@ -4,38 +4,37 @@ version: '3.5'
 services:
   registry:
     image: ${REGISTRY_URL:-privateregistry}/registry:2
-    #    ports:
-    # - "5000:5000"
+    #ports:
+    #  - "5000:5000"
     environment:
-      REGISTRY_HTTP_ADDR: 0.0.0.0:5000
-      REGISTRY_STORAGE: swift
-      REGISTRY_STORAGE_MAINTENANCE_READONLY: "{\"enabled\":false}"
-      REGISTRY_STORAGE_SWIFT_AUTHURL: ${OS_AUTH_URL}
-      REGISTRY_STORAGE_SWIFT_REGION: ${OS_REGION_NAME}
-      REGISTRY_STORAGE_SWIFT_DOMAIN: ${OS_PROJECT_DOMAIN_NAME}
-      REGISTRY_STORAGE_SWIFT_USERNAME: ${OS_USERNAME}
-      REGISTRY_STORAGE_SWIFT_PASSWORD: ${OS_PASSWORD}
-      REGISTRY_STORAGE_SWIFT_TENANT: ${OS_PROJECT_NAME}
-      REGISTRY_STORAGE_SWIFT_INSECURESKIPVERIFY: "true"
-      REGISTRY_STORAGE_SWIFT_CONTAINER: docker-registry
-      REGISTRY_AUTH: htpasswd
-      REGISTRY_AUTH_HTPASSWD_REALM: "Admin Registry Realm"
-      REGISTRY_AUTH_HTPASSWD_PATH: /opt/registry/auth/users.htpasswd
+      - REGISTRY_HTTP_SECRET=secret
+      - REGISTRY_HTTP_ADDR=0.0.0.0:5000
+      - REGISTRY_STORAGE_MAINTENANCE_READONLY={"enabled":true}
+      - REGISTRY_STORAGE=swift
+      - REGISTRY_STORAGE_SWIFT_AUTHURL=${OS_AUTH_URL}
+      - REGISTRY_STORAGE_SWIFT_REGION=${OS_REGION_NAME}
+      - REGISTRY_STORAGE_SWIFT_DOMAIN=${OS_PROJECT_DOMAIN_NAME}
+      - REGISTRY_STORAGE_SWIFT_USERNAME=${OS_USERNAME}
+      - REGISTRY_STORAGE_SWIFT_PASSWORD=${OS_PASSWORD}
+      - REGISTRY_STORAGE_SWIFT_TENANT=${OS_PROJECT_NAME}
+      - REGISTRY_STORAGE_SWIFT_INSECURESKIPVERIFY=true
+      - REGISTRY_STORAGE_SWIFT_CONTAINER=docker-registry
+      - REGISTRY_AUTH=htpasswd
+      - REGISTRY_AUTH_HTPASSWD_REALM="Admin-Registry-Realm"
+      - REGISTRY_AUTH_HTPASSWD_PATH=/opt/registry/auth/users.htpasswd
     networks:
-      - registry-network
       - app
     deploy:
-      #mode: global
-      mode: replicated
-      replicas: 1
+      mode: global
+      #mode: replicated
+      #replicas: 1
+      endpoint_mode: dnsrr
       restart_policy:
         condition: any
-      endpoint_mode: dnsrr
       placement:
-      #constraints: [node.platform.os == linux]
         constraints:
-#          - node.hostname==swarm-leader-test-leader-0
-          - node.role == manager
+          - node.role==worker
+          #- node.role == manager
       labels:
         - "traefik.enable=true"
         - "traefik.port=5000"
@@ -46,7 +45,6 @@ services:
       - source: registry-auth-htpasswd
         target: /opt/registry/auth/users.htpasswd
         mode: 0440
-
 configs:
   registry-auth-htpasswd:
     external: true
@@ -54,7 +52,3 @@ networks:
   app:
     external: true
     name: traefik-frontend
-  registry-network:
-    driver: overlay
-    name: registry-network
-    attachable: true
